# showtime

./: .gitignore  CMakeLists.txt  README.md
cmake/: imgui.cmake  implot.cmake  tomlplusplus.cmake
src/: item.cc  item.hpp  param.hpp  show.cc  show.hpp  ui.cc  ui.hpp
